zmienilem SKÓRALDO NA SKURA

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Strona o historii najlepszych i najważniejszych sezonach Lecha Poznań
     </nav>
     <article>
         <h2>Nagłowek artylułu</h2>
-        <h1> <strong>MICHAŁ SKÓRALDO</strong>  </h1> 
+        <h1> <strong>MICHAŁ SKURA</strong>  </h1> 
     </article>
 
     <aside>
