dodalem w headzie, mete zeby na kazdym urzadzeniu byla strona wwyswietlana

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     
-    <header style="background-color: aqua; color: black;">    
+    <header>    
         <h1>
 Strona o historii najlepszych i najważniejszych sezonach Lecha Poznań
         </h1>
