--- a/aside.html
+++ b/aside.html
@@ -49,9 +49,13 @@
     >STOP</div>
     <input type="text" name="" id="rTekst" value="ruchomy tekst....">\
     <h2>Zegarek</h2>
+
+    Dzisiejsza data:
+    <div id="Data"></div>
     Aktualny czas:
     <div id="Zegar"></div>
-
+    Licznik odwiedzin:
+    <div id="Odwiedziny"></div>
     Stoper:
     <div id="Stoper">00:00:00</div>
 </body>
