--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 
 <html lang="pl">
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial scale=1">
     <title>Historia Lecha Poznań</title>
     <style>
         h1,h2{text-align: center;}
