calkiem duzo zmian tu zrobilem zobacz se

--- a/artykul.html
+++ b/artykul.html
@@ -18,11 +18,12 @@ Strona o historii najlepszych i najważniejszych sezonach Lecha Poznań
     <nav>
         <h2>Menu</h2>
         <ul>
-            <l1><a href="index.html">Strona główna</a></l1>
-            <l1><a href="artykul.html">Artykuł</a></l1>
-            <l1><a href="tabela.html">Tabela godzin pracy</a></l1>
-            <l1><a href="formularz.html">formularz</a></l1>
-            <l1><a href="tablicaJS.html">Tabela dynamiczna w JS</a></l1>
+            <li><a href="index.html">Strona główna</a></li> <br>
+            <li><a href="artykul.html">Artykuł o ostatnim sezonie</a></li> <br>
+            <li><a href="tabela.html">Wykaz zdobytych trofeów w ostatnich latach</a></li> <br>
+            <li><a href="formularz.html">Formularz zgłoszeniowy do pracy w dziale historycznym Lecha Poznań</a></li> <br>
+            <li><a href="tablicaJS.html">Tabela dynamiczna w JS</a></li> <br>
+            <li><a href="javascript.html">Nie wiem jakis eksperyment</a></li> <br>
         </ul>   
 
         </ul>
@@ -94,7 +95,11 @@ x(t)=A<sub>m</sub><sup>1</sup>sin(2&pi;ft+&phi;<sub>0</sub>)
     </aside>
 
     <footer>
-<p>To jest sropka</p>
+<p>Wiktor Springer <br>
+    153206 <br>
+    Energetyka IV semestr <br>
+    Projekt strony internetowej wykonany w ramach zaliczenia przedmiotu MO: TIiSKwE na kierunku Energetyka 2022/23 <br>
+</p>
 <address>
     <a href="">O nas</a>
     <br>
