--- a/galeria.html
+++ b/galeria.html
@@ -9,6 +9,8 @@
         h1,h2{text-align: center;}
     </style>
     <link rel="stylesheet" href="stylecss/layout.css">
+    <link rel="stylesheet" href="stylecss/slides.css">
+
 </head>
 <body>
     
@@ -35,7 +37,37 @@ Strona o historii najlepszych i najważniejszych sezonach Lecha Poznań
     </nav>
     <article>
         <h1><strong>Galeria zdjęć</strong></h1>
-        
+            <div class="container">
+                <div class="slider">
+                  <div class="slider__slides">
+                    <div class="slider__slide active">
+                       <img src="images/im1.jpg" alt="Piotr Reiss" />
+                    </div>
+                    <div class="slider__slide">
+                      <img src="images/im2.jpg" alt="Jakis chłop z łyżkami na oczach" />
+                    </div>
+                    <div class="slider__slide">
+                      <img src="images/im3.jpg" alt="reisik cieszący się z gola HEJ LECH" />
+                    </div>
+                    <div class="slider__slide">
+                      <img src="images/im4.jpg" alt="Michniewicz płaczący wzruszony poruszon" />
+                    </div>
+                    <div class="slider__slide">
+                        <img src="images/im5.jpg" alt="Lewy jak ryczy po golu cienias" />
+                      </div>
+                  </div>
+                  <div id="nav-button--prev" class="slider__nav-button"></div>
+                  <div id="nav-button--next" class="slider__nav-button"></div>
+                  <div class="slider__nav">
+                    <div class="slider__navlink active"></div>
+                    <div class="slider__navlink"></div>
+                    <div class="slider__navlink"></div>
+                    <div class="slider__navlink"></div>
+                    <div class="slider__navlink"></div>
+                  </div>
+                </div>
+              </div>
+              <script src="script/slides.js"></script>
     </article>
 
     <aside>
