wgrana prezentacja księciunia Wiktorka

--- a/galeria.html
+++ b/galeria.html
@@ -31,6 +31,7 @@ Strona o historii najlepszych i najważniejszych sezonach Lecha Poznań
             <li><a href="tablicaJS.html">Tabela dynamiczna w JS</a></li> <br>
             <li><a href="javascript.html">Nie wiem jakis eksperyment</a></li> <br>
             <li><a href="galeria.html">Galeria zdjęć</a></li> <br>
+            <li><a href="prezentacja.html">Prezentacja</a></li> <br>
         </ul>   
 
         </ul>
