--- a/prezentacja.html
+++ b/prezentacja.html
@@ -36,7 +36,7 @@ Strona o historii najlepszych i najważniejszych sezonach Lecha Poznań
         </ul>
     </nav>
     <article id="outer_prezka">
-            <iframe id= "prezka"src="https://onedrive.live.com/embed?resid=BD6DF509F8D2C360%219295&amp;authkey=!AAlP6cdDLgL-H_k&amp;em=2&amp;wdAr=1.7777777777777777"  frameborder="0">To jest osadzony dokument pakietu <a target="_blank" href="https://office.com">Microsoft Office</a> obsługiwany przez aplikację <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
+        <iframe src="https://onedrive.live.com/embed?resid=BD6DF509F8D2C360%219298&amp;authkey=!APbNQoLNDXmVj6s&amp;em=2&amp;wdAr=1.7777777777777777" width="476px" height="288px" frameborder="0">To jest osadzony dokument pakietu <a target="_blank" href="https://office.com">Microsoft Office</a> obsługiwany przez aplikację <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
     </article>
 
     <aside>
