--- a/tabela.html
+++ b/tabela.html
@@ -24,7 +24,7 @@ Strona o historii najlepszych i najważniejszych sezonach Lecha Poznań
             <li><a href="tabela.html">Wykaz zdobytych trofeów w ostatnich latach</a></li> <br>
             <li><a href="formularz.html">Formularz zgłoszeniowy do pracy w dziale historycznym Lecha Poznań</a></li> <br>
             <li><a href="tablicaJS.html">Tabela dynamiczna w JS</a></li> <br>
-            <li><a href="javascript.html">Nie wiem jakis eksperyment</a></li> <br>
+            <li><a href="javascript.html">Zrelaksuj się!</a></li> <br>
             <li><a href="galeria.html">Galeria zdjęć</a></li> <br>
             <li><a href="prezentacja.html">Prezentacja</a></li> <br>
         </ul>   
