--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ Strona o historii najlepszych i najważniejszych sezonach Lecha Poznań
             <li><a href="tablicaJS.html">Tabela dynamiczna w JS</a></li> <br>
             <li><a href="javascript.html">Nie wiem jakis eksperyment</a></li> <br>
             <li><a href="galeria.html">Galeria zdjęć</a></li> <br>
+            <li><a href="zegar.html">Zegar</a></li>
         </ul>   
 
         </ul>
