zegar usunalem i dodalem zgody do formularza

--- a/formularz.html
+++ b/formularz.html
@@ -170,9 +170,18 @@ Strona o historii najlepszych i najważniejszych sezonach Lecha Poznań
                 <label for="text">Inne</label> <br>
                 <input type="text" name="text" id="text">
             </fieldset>
-<p>Zgody regulaminów</p> <br>
+<p><h1>Zgody</h1></p> <br>
 <input type="checkbox" name="zgoda" id="zgoda">
-<label for="zgoda">Zapoznałem się i akceptuję regulamin <em>*</em></label>
+Zapoznałem się i akceptuję regulamin <em>*</em> <br>
+<input type="checkbox" name="zgoda" id="zgoda">
+Wyrażam zgodę na przetwarzanie moich danych w celach kontaktowych <em>*</em> <br>
+<input type="checkbox" name="zgoda" id="zgoda">
+Wyrażam zgodę na kontakt w celach promocyjnych i marketingowych przez pocztę elektroniczną <br>
+<input type="checkbox" name="zgoda" id="zgoda">
+Wyrażam zgodę na przetwarzanie moich danych osobowych w celach marketingowych <br>
+
+
+
             
             <div class="przyciski">
                  <input type="reset" value="kasuj formularz">
