--- a/javascript.html
+++ b/javascript.html
@@ -34,7 +34,9 @@ Strona o historii najlepszych i najważniejszych sezonach Lecha Poznań
         </ul>
     </nav>
     <article>
-        <canvas id="grafikaJS" width="400" height="300"></canvas>
+        <canvas id="grafikaJS" width="400" height="300"></canvas> </br>
+        velocity:<input type="range" id="veloSlider" min="1" max="10" value="3"></br>
+        radius: &nbsp&nbsp<input type="range" id="radSlider" min="10" max="50" value="20">
         <script src="script/canvas.js"></script>
     </article>
 
