--- a/index.html
+++ b/index.html
@@ -9,45 +9,61 @@
         h1,h2{text-align: center;}
     </style>
     <link rel="stylesheet" href="stylecss/layout.css">
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+     <link rel="stylesheet" href="stylecss/rwd.css">
+<style>
+
+</style>
 </head>
 <body>
     
-    <header>    
+    <header>   
+            <!-- Top Navigation Menu -->
         <h1>
-Strona o historii najlepszych i najważniejszych sezonach Lecha Poznań
+                Strona o historii najlepszych i najważniejszych sezonach Lecha Poznań
         </h1>
-
+        <div class="topnav">
+            <a href="#home" class="active">Strona główna
+            </h1></a>
+            <div id="myLinks">
+                <a href="index.html">Strona główna</a> <br>
+                <a href="artykul.html">Artykuł o ostatnim sezonie</a> <br>
+                <a href="tabela.html">Wykaz zdobytych trofeów w ostatnich latach</a> <br>
+                <a href="formularz.html">Formularz zgłoszeniowy do pracy w dziale historycznym Lecha Poznań</a> <br>
+                <a href="tablicaJS.html">Tabela dynamiczna w JS</a> <br>
+                <a href="javascript.html">Zrelaksuj się!</a> <br>
+                <a href="galeria.html">Galeria zdjęć</a> <br>
+                <a href="prezentacja.html">Prezentacja</a> <br>
+            </div>
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+              <i class="fa fa-bars"></i>
+            </a>
+        </div>
     </header>
     
-    <nav>
-        <h2>Menu</h2>
-        <ul>
-            <li><a href="index.html">Strona główna</a></li> <br>
-            <li><a href="artykul.html">Artykuł o ostatnim sezonie</a></li> <br>
-            <li><a href="tabela.html">Wykaz zdobytych trofeów w ostatnich latach</a></li> <br>
-            <li><a href="formularz.html">Formularz zgłoszeniowy do pracy w dziale historycznym Lecha Poznań</a></li> <br>
-            <li><a href="tablicaJS.html">Tabela dynamiczna w JS</a></li> <br>
-            <li><a href="javascript.html">Zrelaksuj się!</a></li> <br>
-            <li><a href="galeria.html">Galeria zdjęć</a></li> <br>
-            <li><a href="zegar.html">Zegar</a></li>
-            <li><a href="prezentacja.html">Prezentacja</a></li> <br>
+    <script>
+        function myFunction() {
+          var x = document.getElementById("myLinks");
+          if (x.style.display === "block") {
+            x.style.display = "none";
+          } else {
+            x.style.display = "block";
+          }
+        }
+        </script>
+    <div>
+        <div class="article">
+            <h1><strong>KKS Lech Poznań</strong></h1>
+            <h3>Lech Poznań – polski klub piłkarski z siedzibą w Poznaniu, który występuje w Ekstraklasie. W swojej historii wywalczył 8 tytułów Mistrza Polski, 5 razy triumfował w rozgrywkach o Puchar Polski, 6 razy zdobywał Superpuchar Polski. Zajmuje 5. miejsce w tabeli wszech czasów ekstraklasy. Założony został w początkach sierpnia 1920 roku w miejscowości Dębiec (teren dzisiejszego Poznania) jako Lutnia Dębiec. Potwierdzają ten fakt obchody siedmiolecia istnienia klubu, obchodzone w roku 1927, o czym donosi poznańska prasa. W marcu 1922 klub został przyjęty do Poznańskiego ZOPN, ale nie miało to nic wspólnego z założeniem klubu. Wcześniej klub musiał zorganizować zebranie założycielskie, wybrać władze, przyjąć statut, spisać protokół, zatwierdzić statut i być wpisany do rejestru stowarzyszeń, dopiero później mógł ubiegać się o przyjęcie do związku. Przez wszystkie lata, od założenia klubu, aż do teraz, Poznański Lech przynosił widzom i kibicom wiele emocji, a niektóre z meczów są wspominane przez fanów piłki nożnej z całej Europy.
 
-        </ul>   
+                Klub jest najbardziej znany z osiągnięć piłki nożnej, lecz działał dawniej jako wielosekcyjny prowadząc m.in. sekcje boksu, brydża, gimnastyki, hokeja na trawie, kajakarstwa, kolarstwa, koszykówki, kręglarstwa klasycznego, lekkiej atletyki, łucznictwa, piłki ręcznej, podnoszenia ciężarów, pływania, siatkówki, strzelectwa, szachów, szermierki, tenisa stołowego, zapasów. Największe sukcesy sportowe odnosiła sekcja koszykówki mężczyzn, mająca na swoim koncie 11 tytułów mistrzowskich oraz 7 tytułów wicemistrzowskich notując również największe sukcesy w historii klubu na arenie międzynarodowej w postaci awansu do 1/2 finału Pucharu Europejskich Mistrzów Krajowych w sezonie 1958/59 oraz 1/4 finału tychże rozgrywek w sezonie 1989/90. Ta strona jest jednak poświęcona osiągnięciom w dziedzinie futbolu, dlatego serdecznie zachęcamy do dokładnego zwiedzenia strony o legendarnym ,,Kolejorzu".
+            </h3> 
+        </div>
 
-        </ul>
-    </nav>
-    <article>
-        <h1><strong>KKS Lech Poznań</strong></h1>
-        <h3>Lech Poznań – polski klub piłkarski z siedzibą w Poznaniu, który występuje w Ekstraklasie. W swojej historii wywalczył 8 tytułów Mistrza Polski, 5 razy triumfował w rozgrywkach o Puchar Polski, 6 razy zdobywał Superpuchar Polski. Zajmuje 5. miejsce w tabeli wszech czasów ekstraklasy. Założony został w początkach sierpnia 1920 roku w miejscowości Dębiec (teren dzisiejszego Poznania) jako Lutnia Dębiec. Potwierdzają ten fakt obchody siedmiolecia istnienia klubu, obchodzone w roku 1927, o czym donosi poznańska prasa. W marcu 1922 klub został przyjęty do Poznańskiego ZOPN, ale nie miało to nic wspólnego z założeniem klubu. Wcześniej klub musiał zorganizować zebranie założycielskie, wybrać władze, przyjąć statut, spisać protokół, zatwierdzić statut i być wpisany do rejestru stowarzyszeń, dopiero później mógł ubiegać się o przyjęcie do związku. Przez wszystkie lata, od założenia klubu, aż do teraz, Poznański Lech przynosił widzom i kibicom wiele emocji, a niektóre z meczów są wspominane przez fanów piłki nożnej z całej Europy.
-
-            Klub jest najbardziej znany z osiągnięć piłki nożnej, lecz działał dawniej jako wielosekcyjny prowadząc m.in. sekcje boksu, brydża, gimnastyki, hokeja na trawie, kajakarstwa, kolarstwa, koszykówki, kręglarstwa klasycznego, lekkiej atletyki, łucznictwa, piłki ręcznej, podnoszenia ciężarów, pływania, siatkówki, strzelectwa, szachów, szermierki, tenisa stołowego, zapasów. Największe sukcesy sportowe odnosiła sekcja koszykówki mężczyzn, mająca na swoim koncie 11 tytułów mistrzowskich oraz 7 tytułów wicemistrzowskich notując również największe sukcesy w historii klubu na arenie międzynarodowej w postaci awansu do 1/2 finału Pucharu Europejskich Mistrzów Krajowych w sezonie 1958/59 oraz 1/4 finału tychże rozgrywek w sezonie 1989/90. Ta strona jest jednak poświęcona osiągnięciom w dziedzinie futbolu, dlatego serdecznie zachęcamy do dokładnego zwiedzenia strony o legendarnym ,,Kolejorzu".
-        </h3> 
-    </article>
-
-    <aside>
-        <iframe src="aside.html"></iframe>
-    </aside>
-
+        <div class="aside">
+            <iframe src="aside.html"></iframe>
+        </div>
+    </div>
     <footer>
 <p> Wiktor Springer <br>
     153206 <br>
