--- a/artykul.html
+++ b/artykul.html
@@ -6,6 +6,7 @@
     <title>Artykuł o historii Lecha Poznań</title>
     <link rel="stylesheet" href="stylecss/layout.css">
     <link rel="stylesheet" href="stylecss/rwd.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     
