--- a/artykul.html
+++ b/artykul.html
@@ -3,7 +3,7 @@
 <html lang="pl">
 <head>
     <meta charset="utf-8" />
-    <title>Artykuł o historii Lecha Poznań</title>
+    <title>Artykuł o ostatnim sezonie Lecha Poznań</title>
     <link rel="stylesheet" href="stylecss/layout.css">
     <link rel="stylesheet" href="stylecss/rwd.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -21,12 +21,14 @@
         <div id="myLinks">
             <a href="index.html">Strona główna</a> <br>
             <a href="artykul.html">Artykuł o ostatnim sezonie</a> <br>
-            <a href="tabela.html">Wykaz zdobytych trofeów w ostatnich latach</a> <br>
+            <a href="tabela.html">Wykaz osiągnięć zdobytych w ostatnich latach</a> <br>
             <a href="formularz.html">Formularz zgłoszeniowy do pracy w dziale historycznym Lecha Poznań</a> <br>
-            <a href="tablicaJS.html">Tabela dynamiczna w JS</a> <br>
+            <a href="tablicaJS.html">Zgody kibicowskie</a> <br>
             <a href="javascript.html">Zrelaksuj się!</a> <br>
             <a href="galeria.html">Galeria zdjęć</a> <br>
             <a href="prezentacja.html">Prezentacja</a> <br>
+            <a href="zawodnicy.html"> Zawodnicy</a> <br>
+            <a href="kalkulator.html"> Kalkulator </a> <br>
         </div>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
           <i class="fa fa-bars"></i>
@@ -47,13 +49,13 @@
 
 <div>
     <div class="article">
-        <header>
+        
             <h2>
-Sezon 2021/22
+            Sezon 2021/22
             </h2>
             <h3>Pamiętny rok dla każego Poznaniaka</h3>
-        </header>
-        <p>Równo rok temu miejsce miało zakończenie jednego z najbardziej pamiętnego sezonu Lecha Poznań. Dużą zasługę w tym osiągnięciu miał z pewnością Trener Maciej Skorża, który sumiennie przepracował sezon przygotowawczy ze swoimi zawodnikami, co pomogło Lechitom w osiąganiu wybitnych wyników. Podstawowymi elementami układanki "MaeStro" byli tacy zawodnicy jak: Mikael Ishak, Jesper Karlstrom i Joao Amaral. Z pewnością można stwierdzić, że po minionym sezonie ci zawodnicy będą w Lechu zapamiętani na długo jako legendy klubu. Warto wspomnieć o równej grze Kolejorza na różnych frontach w ciągu sezonu. Lech w ciągu sezonu występował w: </p>
+        
+        <p>Równo rok temu miejsce miało zakończenie jednego z najbardziej pamiętnego sezonu Lecha Poznań. Dużą zasługę w tym osiągnięciu miał z pewnością Trener Maciej Skorża, który sumiennie przepracował sezon przygotowawczy ze swoimi zawodnikami, co pomogło Lechitom w osiąganiu wybitnych wyników. Podstawowymi elementami układanki "MaeStro" byli tacy zawodnicy jak: Mikael Ishak, Jesper Karlstrom i Joao Amaral. Z pewnością można stwierdzić, że po minionym sezonie ci zawodnicy będą w Lechu zapamiętani na długo jako legendy klubu. Warto wspomnieć o równej grze Kolejorza na różnych frontach w ciągu sezonu. Lech w ciągu sezonu występował w: </p> 
         <ol type="a">
         <li> Ekstraklasie
         <li> Pucharze Polski
@@ -137,11 +139,6 @@ Sezon 2021/22
     Energetyka IV semestr <br>
     Projekt strony internetowej wykonany w ramach zaliczenia przedmiotu MO: TIiSKwE na kierunku Energetyka 2022/23 <br>
 </p>
-<address>
-    <a href="">O nas</a>
-    <br>
-    <a href="">Kontakt</a>
-</address>
     </footer>
 </body>
 </html>
