--- a/galeria.html
+++ b/galeria.html
@@ -4,12 +4,14 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial scale=1">
-    <title>Historia Lecha Poznań</title>
+    <title>Galeria zdjęć</title>
     <style>
         h1,h2{text-align: center;}
     </style>
     <link rel="stylesheet" href="stylecss/layout.css">
     <link rel="stylesheet" href="stylecss/slides.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+     <link rel="stylesheet" href="stylecss/rwd.css">
 
 </head>
 <body>
@@ -21,40 +23,67 @@ Strona o historii najlepszych i najważniejszych sezonach Lecha Poznań
 
     </header>
     
-    <nav>
-        <h2>Menu</h2>
-        <ul>
-            <li><a href="index.html">Strona główna</a></li> <br>
-            <li><a href="artykul.html">Artykuł o ostatnim sezonie</a></li> <br>
-            <li><a href="tabela.html">Wykaz zdobytych trofeów w ostatnich latach</a></li> <br>
-            <li><a href="formularz.html">Formularz zgłoszeniowy do pracy w dziale historycznym Lecha Poznań</a></li> <br>
-            <li><a href="tablicaJS.html">Tabela dynamiczna w JS</a></li> <br>
-            <li><a href="javascript.html">Zrelaksuj się!</a></li> <br>
-            <li><a href="galeria.html">Galeria zdjęć</a></li> <br>
-            <li><a href="prezentacja.html">Prezentacja</a></li> <br>
-        </ul>   
+    <div class="topnav">
+      <a href="#home" class="active">Strona główna
+      </h1></a>
+      <div id="myLinks">
+          <a href="index.html">Strona główna</a> <br>
+          <a href="artykul.html">Artykuł o ostatnim sezonie</a> <br>
+          <a href="tabela.html">Wykaz osiągnięć zdobytych w ostatnich latach</a> <br>
+          <a href="formularz.html">Formularz zgłoszeniowy do pracy w dziale historycznym Lecha Poznań</a> <br>
+          <a href="tablicaJS.html">Zgody kibicowskie</a> <br>
+          <a href="javascript.html">Zrelaksuj się!</a> <br>
+          <a href="galeria.html">Galeria zdjęć</a> <br>
+          <a href="prezentacja.html">Prezentacja</a> <br>
+          <a href="zawodnicy.html"> Zawodnicy</a> <br>
+          <a href="kalkulator.html"> Kalkulator </a> <br>
+      </div>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i>
+      </a>
+  </div>
+</header>
 
-        </ul>
-    </nav>
+<script>
+  function myFunction() {
+    var x = document.getElementById("myLinks");
+    if (x.style.display === "block") {
+      x.style.display = "none";
+    } else {
+      x.style.display = "block";
+    }
+  }
+  </script>
     <article>
+      <div class="article">
         <h1><strong>Galeria zdjęć</strong></h1>
             <div class="container">
                 <div class="slider">
                   <div class="slider__slides">
                     <div class="slider__slide active">
-                       <img src="images/im1.jpg" alt="Piotr Reiss" />
+                       <img src="images/skoraldo.png" alt="Piotr Reiss" />
                     </div>
                     <div class="slider__slide">
-                      <img src="images/im2.jpg" alt="Jakis chłop z łyżkami na oczach" />
+                      <img src="images/im1.jpg" alt="Piotr Reiss" />
                     </div>
                     <div class="slider__slide">
-                      <img src="images/im3.jpg" alt="reisik cieszący się z gola HEJ LECH" />
+                      <img src="images/im3.jpg" alt="muras cieszący się z gola" />
                     </div>
                     <div class="slider__slide">
-                      <img src="images/im4.jpg" alt="Michniewicz płaczący wzruszony poruszon" />
+                      <img src="images/im4.jpg" alt="Michniewicz płaczący wzruszony" />
                     </div>
                     <div class="slider__slide">
                         <img src="images/im5.jpg" alt="Lewy jak ryczy po golu cienias" />
+                      </div>
+                      <div class="slider__slide">
+                        <img src="images/sypula.png" alt="Sypulak" />
+                      </div>
+                      <div class="slider__slide">
+                        <img src="images/nickibille.png" alt="nbn" />
+                      </div>
+                        <div class="slider__slide">
+                          <img src="images/buciki.png" alt="ja jestem kibicem lecha" />
+            
                       </div>
                   </div>
                   <div id="nav-button--prev" class="slider__nav-button"></div>
@@ -65,12 +94,15 @@ Strona o historii najlepszych i najważniejszych sezonach Lecha Poznań
                     <div class="slider__navlink"></div>
                     <div class="slider__navlink"></div>
                     <div class="slider__navlink"></div>
+                    <div class="slider__navlink"></div>
+                    <div class="slider__navlink"></div>
+                    <div class="slider__navlink"></div>
                   </div>
                 </div>
               </div>
               <script src="script/slides.js"></script>
     </article>
-
+</div>
     <aside>
         <iframe src="aside.html"></iframe>
     </aside>
@@ -81,11 +113,6 @@ Strona o historii najlepszych i najważniejszych sezonach Lecha Poznań
     Energetyka IV semestr <br>
     Projekt strony internetowej wykonany w ramach zaliczenia przedmiotu MO: TIiSKwE na kierunku Energetyka 2022/23 <br>
  </p>
-<address>
-    <a href="">O nas</a>
-    <br>
-    <a href="">Kontakt</a>
-</address>
     </footer>
 </body>
 </html>
