--- a/prezentacja.html
+++ b/prezentacja.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial scale=1">
-    <title>Historia Lecha Poznań</title>
+    <title>Prezentacja</title>
     <style>
         h1,h2{text-align: center;}
     </style>
     <link rel="stylesheet" href="stylecss/layout.css">
     <link rel="stylesheet" href="stylecss/slides.css">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="stylecss/rwd.css">
 </head>
 <body>
     
@@ -21,25 +22,42 @@ Strona o historii najlepszych i najważniejszych sezonach Lecha Poznań
 
     </header>
     
-    <nav>
-        <h2>Menu</h2>
-        <ul>
-            <li><a href="index.html">Strona główna</a></li> <br>
-            <li><a href="artykul.html">Artykuł o ostatnim sezonie</a></li> <br>
-            <li><a href="tabela.html">Wykaz zdobytych trofeów w ostatnich latach</a></li> <br>
-            <li><a href="formularz.html">Formularz zgłoszeniowy do pracy w dziale historycznym Lecha Poznań</a></li> <br>
-            <li><a href="tablicaJS.html">Tabela dynamiczna w JS</a></li> <br>
-            <li><a href="javascript.html">Zrelaksuj się!</a></li> <br>
-            <li><a href="galeria.html">Galeria zdjęć</a></li> <br>
-            <li><a href="prezentacja.html">Prezentacja</a></li> <br>
-        </ul>   
+    <div class="topnav">
+        <a href="#home" class="active">Strona główna
+        </h1></a>
+        <div id="myLinks">
+            <a href="index.html">Strona główna</a> <br>
+            <a href="artykul.html">Artykuł o ostatnim sezonie</a> <br>
+            <a href="tabela.html">Wykaz osiągnięć zdobytych w ostatnich latach</a> <br>
+            <a href="formularz.html">Formularz zgłoszeniowy do pracy w dziale historycznym Lecha Poznań</a> <br>
+            <a href="tablicaJS.html">Zgody kibicowskie</a> <br>
+            <a href="javascript.html">Zrelaksuj się!</a> <br>
+            <a href="galeria.html">Galeria zdjęć</a> <br>
+            <a href="prezentacja.html">Prezentacja</a> <br>
+            <a href="zawodnicy.html"> Zawodnicy</a> <br>
+            <a href="kalkulator.html"> Kalkulator </a> <br>
+        </div>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+          <i class="fa fa-bars"></i>
+        </a>
+    </div>
+</header>
 
-        </ul>
-    </nav>
+<script>
+    function myFunction() {
+      var x = document.getElementById("myLinks");
+      if (x.style.display === "block") {
+        x.style.display = "none";
+      } else {
+        x.style.display = "block";
+      }
+    }
+    </script>
+    <div class="article">
     <article id="outer_prezka">
         <iframe src="https://onedrive.live.com/embed?resid=BD6DF509F8D2C360%219298&amp;authkey=!APbNQoLNDXmVj6s&amp;em=2&amp;wdAr=1.7777777777777777" width="476px" height="288px" frameborder="0">To jest osadzony dokument pakietu <a target="_blank" href="https://office.com">Microsoft Office</a> obsługiwany przez aplikację <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
     </article>
-
+</div>
     <aside>
         <iframe src="aside.html"></iframe>
     </aside>
@@ -50,11 +68,6 @@ Strona o historii najlepszych i najważniejszych sezonach Lecha Poznań
     Energetyka IV semestr <br>
     Projekt strony internetowej wykonany w ramach zaliczenia przedmiotu MO: TIiSKwE na kierunku Energetyka 2022/23 <br>
  </p>
-<address>
-    <a href="">O nas</a>
-    <br>
-    <a href="">Kontakt</a>
-</address>
     </footer>
 </body>
 </html>
