poprawiona widocznosc menu, usuniecie strony glownej z rozwijanego menu, dodany link do strony glownej na kliknieciu

--- a/artykul.html
+++ b/artykul.html
@@ -10,31 +10,29 @@
 </head>
 <body>
     
-    <header>   
-        <!-- Top Navigation Menu -->
-    <h1>
-            Strona o historii najlepszych i najważniejszych sezonach Lecha Poznań
-    </h1>
-    <div class="topnav">
-        <a href="#home" class="active">Strona główna
-        </h1></a>
-        <div id="myLinks">
-            <a href="index.html">Strona główna</a> <br>
-            <a href="artykul.html">Artykuł o ostatnim sezonie</a> <br>
-            <a href="tabela.html">Wykaz osiągnięć zdobytych w ostatnich latach</a> <br>
-            <a href="formularz.html">Formularz zgłoszeniowy do pracy w dziale historycznym Lecha Poznań</a> <br>
-            <a href="tablicaJS.html">Zgody kibicowskie</a> <br>
-            <a href="javascript.html">Zrelaksuj się!</a> <br>
-            <a href="galeria.html">Galeria zdjęć</a> <br>
-            <a href="prezentacja.html">Prezentacja</a> <br>
-            <a href="zawodnicy.html"> Zawodnicy</a> <br>
-            <a href="kalkulator.html"> Kalkulator </a> <br>
+    <header>    
+        <h1>
+                Strona o historii najlepszych i najważniejszych sezonach Lecha Poznań
+        </h1>
+        <div class="topnav">
+            <a href="index.html" class="active">Strona główna
+            </h1></a>
+            <div id="myLinks">
+                <a class="odd" href="artykul.html">Artykuł o ostatnim sezonie</a> <br>
+                <a class= "even" href="tabela.html">Wykaz osiągnięć zdobytych w ostatnich latach</a> <br>
+                <a class="odd" href="formularz.html">Formularz zgłoszeniowy do pracy w dziale historycznym Lecha Poznań</a> <br>
+                <a class= "even" href="tablicaJS.html">Zgody kibicowskie</a> <br>
+                <a class="odd" href="javascript.html">Zrelaksuj się!</a> <br>
+                <a class= "even" href="galeria.html">Galeria zdjęć</a> <br>
+                <a class="odd" href="prezentacja.html">Prezentacja</a> <br>
+                <a class= "even" href="zawodnicy.html"> Zawodnicy</a> <br>
+                <a class="odd" href="kalkulator.html"> Kalkulator </a> <br>
+            </div>
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <i class="fa fa-bars"></i>
+            </a>
         </div>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-          <i class="fa fa-bars"></i>
-        </a>
-    </div>
-</header>
+    </header>
 
     <script>
         function myFunction() {
