--- a/galeria.html
+++ b/galeria.html
@@ -14,7 +14,7 @@
      <link rel="stylesheet" href="stylecss/rwd.css">
 
 </head>
-<body>
+<body class="first">
     
         <header>    
           <h1>
@@ -99,9 +99,9 @@
               <script src="script/slides.js"></script>
     </article>
 </div>
-    <aside>
-        <iframe src="aside.html"></iframe>
-    </aside>
+<div class="aside">
+  <iframe class="iframe_aside"src="aside.html"></iframe>
+</div>
 
     <footer>
 <p> Wiktor Springer <br>
