--- a/prezentacja.html
+++ b/prezentacja.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="stylecss/rwd.css">
 </head>
-<body>
+<body class="first">
     
         <header>    
             <h1>
@@ -51,12 +51,12 @@
     </script>
     <div class="article">
     <article id="outer_prezka">
-        <iframe src="https://onedrive.live.com/embed?resid=BD6DF509F8D2C360%219298&amp;authkey=!APbNQoLNDXmVj6s&amp;em=2&amp;wdAr=1.7777777777777777" width="476px" height="288px" frameborder="0">To jest osadzony dokument pakietu <a target="_blank" href="https://office.com">Microsoft Office</a> obsługiwany przez aplikację <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
+        <iframe src="https://onedrive.live.com/embed?resid=BD6DF509F8D2C360%219298&amp;authkey=!APbNQoLNDXmVj6s&amp;em=2&amp;wdAr=1.7777777777777777" frameborder="0">To jest osadzony dokument pakietu <a target="_blank" href="https://office.com">Microsoft Office</a> obsługiwany przez aplikację <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
     </article>
 </div>
-    <aside>
-        <iframe src="aside.html"></iframe>
-    </aside>
+<div class="aside">
+    <iframe class="iframe_aside"src="aside.html"></iframe>
+</div>
 
     <footer>
 <p> Wiktor Springer <br>
