--- a/zawodnicy.html
+++ b/zawodnicy.html
@@ -15,7 +15,7 @@
 
 </style>
 </head>
-<body>
+<body class="first">
     
     <header>    
         <h1>
@@ -72,7 +72,7 @@
                 </map>
             </section>
             <div class="aside">
-                <iframe src="aside.html"></iframe>
+                <iframe class="iframe_aside"src="aside.html"></iframe>
             </div>
         </div>
         <footer>
