--- a/artykul.html
+++ b/artykul.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="stylecss/rwd.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
-<body>
+<body class="first">
     
     <header>    
         <h1>
@@ -126,7 +126,7 @@
     </div>
 
     <div class="aside">
-        <iframe src="aside.html"></iframe>
+        <iframe class="iframe_aside"src="aside.html"></iframe>
     </div>
 </div>
 
