--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 </style>
 </head>
-<body>
+<body class="first">
     
     <header>    
         <h1>
@@ -61,7 +61,7 @@
             </h3> 
         </div>
         <div class="aside">
-            <iframe src="aside.html"></iframe>
+            <iframe class="iframe_aside"src="aside.html"></iframe>
         </div>
     </div>
     <footer>
