--- a/javascript.html
+++ b/javascript.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
      <link rel="stylesheet" href="stylecss/rwd.css">
 </head>
-<body>
+<body class="first">
     
         <header>    
             <h1>
@@ -55,9 +55,9 @@
         <script src="script/canvas.js"></script>
     </article>
 </div>
-    <aside>
-        <iframe src="aside.html"></iframe>
-    </aside>
+<div class="aside">
+    <iframe class="iframe_aside"src="aside.html"></iframe>
+</div>
 
     <footer>
 <p>Wiktor Springer <br>
