--- a/kalkulator.html
+++ b/kalkulator.html
@@ -15,7 +15,7 @@
 
 </style>
 </head>
-<body>
+<body class="first">
     
   <header>    
     <h1>
@@ -116,9 +116,9 @@
                 }
               </script>
 
-        <div class="aside">
-            <iframe src="aside.html"></iframe>
-        </div>
+<div class="aside">
+  <iframe class="iframe_aside"src="aside.html"></iframe>
+</div>
     </div>
     <footer>
 <p> Wiktor Springer <br>
