--- a/tablicaJS.html
+++ b/tablicaJS.html
@@ -12,7 +12,7 @@
      <link rel="stylesheet" href="stylecss/rwd.css">
     <script src="script/tablica.js"></script>
 </head>
-<body>
+<body class="first">
     
         <header>    
             <h1>
@@ -60,9 +60,9 @@
         <h1> <strong>CHWAŁA WIELKIEJ TRIADZIE!</strong>  </h1> 
     </article>
 </div>
-    <aside>
-        <iframe src="aside.html"></iframe>
-    </aside>
+<div class="aside">
+    <iframe class="iframe_aside"src="aside.html"></iframe>
+</div>
 
     <footer>
 <p>Wiktor Springer <br>
