--- a/aside.html
+++ b/aside.html
@@ -8,7 +8,7 @@
     <script src="script/zegar.js"> </script>
     <link rel="stylesheet" href="stylecss/layout.css">
 </head>
-<body>
+<body class="second">
     <div id="out_con">
         <h2>Zegarek</h2>
 
